# linwhisper

./: .env.example  Cargo.toml  README.md  justfile
src/: api.rs  audio.rs  config.rs  db.rs  main.rs  ui.rs
