[package]
name = "linwhisper"
version = "0.1.13"
edition = "2024"
authors = ["Adolfo Usier"]
license = "MIT"
description = "Minimal CLI voice-to-text tool for Linux with local transcription"
repository = "https://github.com/harryhaaren/linwhisper"

[features]
default = []
api = ["reqwest", "tokio", "serde", "serde_json"]

[dependencies]
cpal = "0.15"
hound = "3.5"
whisper-rs = "0.15"
rubato = "0.14"
dirs = "6"

# Optional API dependencies (behind feature flag)
reqwest = { version = "0.12", features = ["multipart", "json"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
